kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: js-application-service
spec:
  selector:
     app: js-application
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
